force-app/main/default/objects/Acknowledgment_Rule__mdt/Acknowledgment_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Acknowledgment Rule</label>
    <pluralLabel>Acknowledgment Rules</pluralLabel>
</CustomObject>