force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
        <description>Only active rules are evaluated by the router.</description>
    <label>Active</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>