force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Member__c</fullName>
    <description>Restricts this rule by whether the donor is a current board member (Contact.Current_Board_Member__c). Leave BLANK to ignore board status - preserving the engine&apos;s blank-means-any convention so existing rules are unaffected. Yes = only current board members. No = only non-board donors. JSI-87 / Jason Ott.</description>
    <label>Board Member</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>