force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
        <description>Campaign name to match; blank = any.</description>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>