force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
        <description>How to acknowledge: Email (flow-sent) or Print (letter).</description>
    <label>Channel</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>