force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/DAF_Gift__c.field-meta.xml
<CustomField>
    <fullName>DAF_Gift__c</fullName>
    <description>Restricts this rule by donor-advised-fund status. Leave BLANK to ignore DAF status (matches either kind of gift) - this preserves the engine&apos;s blank-means-any convention, so existing rules are unaffected. Yes = match only DAF gifts. No = match only non-DAF gifts. JSI-124 / Jason Ott.</description>
    <label>DAF Gift</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>