force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
        <description>Donor type to match (e.g. Board, Long-Time, New); blank = any.</description>
    <label>Donor Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>