force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
        <description>Email path: DeveloperName of the email template to send.</description>
    <label>Email Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>