force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
        <description>General Accounting Unit / fund name to match; blank = any.</description>
    <label>Fund (GAU)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>