force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Amount__c</fullName>
        <description>Inclusive upper bound of gift Amount; blank = no upper bound.</description>
    <label>Max Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>