force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
        <description>Inclusive lower bound of gift Amount; blank = no lower bound.</description>
    <label>Min Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>