force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
        <description>Lower number = higher priority; the router picks the lowest-priority matching rule.</description>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>