force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
        <description>Opportunity RecordType DeveloperName this rule matches; blank = any.</description>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>