force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Send_Mode__c.field-meta.xml
<CustomField>
    <fullName>Send_Mode__c</fullName>
        <description>Auto = send immediately; Approval-Gated = reviewer must approve first.</description>
    <label>Send Mode</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Approval-Gated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>