force-app/main/default/objects/Acknowledgment_Rule__mdt/fields/Template_Flow__c.field-meta.xml
<CustomField>
    <fullName>Template_Flow__c</fullName>
    <description>Print path: template key that the single Acknowledgment_Letter flow keys off (via its Pick Template decision) to render the right letter, e.g. Ack_MajorGift / Ack_InKind / Ack_General.</description>
    <label>Template Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>